<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include layout="@layout/part_result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:src="@drawable/cross_icon" />

        <Button
            android:id="@+id/stats_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:text="@string/stats_name_string"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/history_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:text="@string/history_name_string"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/reference_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:text="@string/reference_name_string"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>

</FrameLayout>