<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include layout="@layout/part_result" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:src="@drawable/cross_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/count_game_string"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/count_game_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/count_finished_game_string"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/count_finished_game_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/count_wined_game_string"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/count_guessed_word_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/average_attempt_to_guess_word_string"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/average_attempt_to_guess_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/total_game_time_string"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/total_game_time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/average_game_time_string"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/average_game_time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/change_state_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_gravity="center|bottom"
            android:background="@color/white"
            android:text=""
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/get_stats_data_from_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_gravity="center|bottom"
            android:background="@color/white"
            android:text="@string/get_stats_from_file_text"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black" />

    </GridLayout>

</FrameLayout>